inclusão de logomarca

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,56 @@ footer p{
     color: rgba(255, 255, 255, 0.7);
     font-style: italic;
 }
+
+/* Fundo com degradê */
+body {
+    background: linear-gradient(to right, #74ebd5, #acb6e5);
+}
+
+/* Cabeçalho */
+header {
+    display: flex;
+    align-items: center;
+    background: linear-gradient(to right, #74ebd5, #acb6e5);
+    padding: 10px;
+}
+
+.logo-topo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-left: 320px;
+}
+
+/* Seções */
+section {
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Títulos e textos */
+h1, h2 {
+    color: black;
+    font-family: 'Arial Black', sans-serif;
+}
+
+p, li {
+    color: black;
+    font-family: 'Verdana', sans-serif;
+}
+
+/* Rodapé */
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logo-footer {
+    width: 80px;
+    height: 80px;
+}
+
