--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
 /* Fundo com degradê */
 body {
-background: linear-gradient(to right, #74ebd5, #acb6e5);
-    margin: 0;
-    font-family: 'Verdana', sans-serif;
+    background: linear-gradient(to right, #74ebd5, #acb6e5);
 }
 
 /* Transparência na seção */
@@ -89,7 +87,7 @@ p, li {
     }
 
     .logo-topo {
-        margin-right: 0;
+        margin-left: 0;
         margin-bottom: 15px;
     }
 
@@ -104,9 +102,19 @@ p, li {
     section {
         padding: 15px;
     }
+
+    footer {
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
 @media (max-width: 480px) {
+    .logo-topo {
+        margin-left: 0;  
+        margin-bottom: 15px;      
+    }
+
     h1 {
         font-size: 1rem;
     }
@@ -114,11 +122,10 @@ p, li {
     section {
         padding: 10px;
     }
-
+    
     .logo-footer {
         width: 50px;
         height: 50px;
+        margin-top: 30px;
     }
 }
-
-
